# beginner-fine-tuning-mlx

./: .gitignore  README.md  constants.py  convert.py  generate.py  pyproject.toml  test.py  train.py
dataset/: build.py  format.py
utils/: count_iters.py  count_tokens.py
